Re configuração das pastas do back com front
começando a adicionar os testes com jest. Usando dotenv também

--- a/src/db/.env
+++ b/src/db/.env
@@ -1,5 +1,42 @@
+
+
+
+
+
+# ================================#
+# Configurações de Autenticação JWT
+# ================================#
+# Chave secreta usada para assinar/verificar tokens JWT#
+SECRET_KEY=nao_seiAsenha
+
+# Tempo de expiração do token JWT (exemplo: 1h, 2d, etc.)
+JWT_EXPIRATION=2h
+
+# ================================#
+# Configurações do Banco de Dados
+# ================================#
 DB_HOST=dpg-csq9h62j1k6c738f5010-a.oregon-postgres.render.com
+DB_PORT=5432
 DB_USER=lardavovo1
 DB_PASS=7Th6l0Od3Vw3VxqfF3FvYw4nvsC0cedF
 DB_NAME=lardavovo
-PORT=5432
+
+# ================================#
+# Configurações de Email (Nodemailer)
+# ================================#
+EMAIL_HOST=smtp-mail.outlook.com
+EMAIL_PORT=587
+EMAIL_USER=lardavovo@hotmail.com #ou o email que o gerente vai usar, pessoal talvez
+EMAIL_PASSWORD=senhaDoGerente
+
+# ================================
+# Configurações Gerais
+# ================================
+# URL base do frontend (para uso em emails ou redirecionamentos)
+FRONTEND_URL=http://localhost:3000
+
+# Porta em que o servidor backend será executado
+PORT=5000
+
+# Ambiente (development ou production)
+NODE_ENV=development
