--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./app.js",
     "dev": "nodemon ./app.js",
-    "sync-db": "node ../db/database.js"
+    "sync-db": "node ../db/database.js",
+    "test": "jest"
   },
   "keywords": [
     "estoque",
@@ -30,7 +31,9 @@
     "sequelize": "^6.31.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.0.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.0"
   },
   "engines": {
     "node": ">=14.0.0"
