--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "estoque_da_vovo": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
