--- a/src/db/.env
+++ b/src/db/.env
@@ -24,8 +24,8 @@ DB_NAME=lardavovo
 # ================================#
 # Configurações de Email (Nodemailer)
 # ================================#
-EMAIL_HOST=smtp-mail.outlook.com
-EMAIL_PORT=587
+SMTP_HOST=smtp-mail.outlook.com
+SMTP_PORT=587
 EMAIL_USER=lardavovo@hotmail.com #ou o email que o gerente vai usar, pessoal talvez
 EMAIL_PASSWORD=senhaDoGerente
 
@@ -36,7 +36,7 @@ EMAIL_PASSWORD=senhaDoGerente
 FRONTEND_URL=http://localhost:3000
 
 # Porta em que o servidor backend será executado
-PORT=5000
+PORT=4000
 
 # Ambiente (development ou production)
 NODE_ENV=development
