--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lar-da-vovo-estoque": "file:",
+    "module-alias": "^2.2.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.0"
