--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node ../build/app.js",
-    "dev": "nodemon ../app.js",
-    "sync-db": "node ../db/database.js",
+    "dev": "nodemon ../build/app.js",
+    "sync-db": "node ../db/databaseSync.js",
     "test": "jest"
   },
   "keywords": [
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.0",
     "lar-da-vovo-estoque": "file:",
     "module-alias": "^2.2.3",
@@ -33,7 +34,7 @@
   },
   "devDependencies": {
     "jest": "^29.0.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.7",
     "supertest": "^6.3.0"
   },
   "engines": {
