--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -5,10 +5,8 @@
   "main": "src/backend/app.js",
   "type": "module",
   "scripts": {
-
     "start": "node ./build/app.js",
     "dev": "nodemon ./build/app.js",
-
     "sync-db": "node ../db/databaseSync.js",
     "test": "jest"
   },
@@ -30,6 +28,7 @@
     "jsonwebtoken": "^9.0.0",
     "lar-da-vovo-estoque": "file:",
     "module-alias": "^2.2.3",
+    "nodemailer": "^6.9.16",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.0"
