--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node ./build/app.js",
     "dev": "nodemon ./build/app.js",
-    "sync-db": "node ../db/databaseSync.js",
+    "sync-db": "node ../backend/db/databaseSync.js",
     "test": "jest"
   },
   "keywords": [
@@ -20,6 +20,7 @@
   "author": "João Victor Vasconcellos de Santana",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
