--- a/src/frontend/estoque_da_vovo/package.json
+++ b/src/frontend/estoque_da_vovo/package.json
@@ -15,10 +15,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "estoque_da_vovo": "file:",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.5.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
