--- a/src/frontend/estoque_da_vovo/package.json
+++ b/src/frontend/estoque_da_vovo/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "estoque_da_vovo": "file:",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
     "react-bootstrap": "^2.10.5",
