--- a/src/backend/models/tabelas_em_CommonJS/config/config.json
+++ b/src/backend/models/tabelas_em_CommonJS/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "lardavovo1",
-    "password": "7Th6l0Od3Vw3VxqfF3FvYw4nvsC0cedF",
-    "database": "lardavovo",
-    "host": "dpg-csq9h62j1k6c738f5010-a.oregon-postgres.render.com",
+    "username": "lardavovo",
+    "password": "AlaY3umtqV5DA9ah0pUUyW7ibS4NOEd3",
+    "database": "estoque_wmx6",
+    "host": "dpg-cte4h62lqhvc73dcvvng-a.oregon-postgres.render.com",
     "dialect": "postgres",
     "port": 5432,
     "dialectOptions": {
@@ -14,10 +14,10 @@
     }
   },
   "test": {
-    "username": "lardavovo1",
-    "password": "7Th6l0Od3Vw3VxqfF3FvYw4nvsC0cedF",
-    "database": "lardavovo",
-    "host": "dpg-csq9h62j1k6c738f5010-a.oregon-postgres.render.com",
+    "username": "lardavovo",
+    "password": "AlaY3umtqV5DA9ah0pUUyW7ibS4NOEd3",
+    "database": "estoque_wmx6",
+    "host": "dpg-cte4h62lqhvc73dcvvng-a.oregon-postgres.render.com",
     "dialect": "postgres",
     "port": 5432,
     "dialectOptions": {
@@ -28,10 +28,10 @@
     }
   },
   "production": {
-    "username": "lardavovo1",
-    "password": "7Th6l0Od3Vw3VxqfF3FvYw4nvsC0cedF",
-    "database": "lardavovo",
-    "host": "dpg-csq9h62j1k6c738f5010-a.oregon-postgres.render.com",
+    "username": "lardavovo",
+    "password": "AlaY3umtqV5DA9ah0pUUyW7ibS4NOEd3",
+    "database": "estoque_wmx6",
+    "host": "dpg-cte4h62lqhvc73dcvvng-a.oregon-postgres.render.com",
     "dialect": "postgres",
     "port": 5432,
     "dialectOptions": {
