--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node ./build/app.js",
     "dev": "nodemon ./build/app.js",
     "sync-db": "node ../backend/db/databaseSync.js",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "keywords": [
     "estoque",
