--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start:backend": "npm run start --prefix backend",
     "start:frontend": "npm run dev --prefix frontend",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "build:backend": "npm run build --prefix backend",
+    "build:frontend": "npm run build --prefix frontend",
+    "build": "npm run build:backend && npm run build:frontend"
   },
   "keywords": [],
   "author": "",
