--- a/src/package.json
+++ b/src/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "description": "Node.js: Certifique-se de que o Node.js está instalado em sua máquina. Baixar Node.js.",
   "main": "index.js",
+  "private": true,
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
   "scripts": {
-    "start:backend": "npm run start --prefix backend",
+    "install:frontend": "npm install --prefix frontend",
+    "install:backend": "npm install --prefix backend",
+    "build:backend": "npm run build --workspace backend",
+    "build:frontend": "npm run build --workspace frontend",
+    "build": "npm run build:backend && npm run build:frontend",
     "start:frontend": "npm run dev --prefix frontend",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "build:backend": "npm run build --prefix backend",
-    "build:frontend": "npm run build --prefix frontend",
-    "build": "npm run build:backend && npm run build:frontend"
+    "start:backend": "npm run start --prefix backend",
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "keywords": [],
   "author": "",
@@ -18,6 +25,5 @@
     "concurrently": "^9.1.0"
   },
   "dependencies": {
-    "src": "file:"
   }
 }
