--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -24,8 +24,7 @@
     "react-apexcharts": "^1.5.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0",
-    "vite": "^5.4.10"
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -36,6 +35,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0"
+    "globals": "^15.11.0",
+    "vite": "^5.4.10"
   }
 }
