--- a/src/package.json
+++ b/src/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "install:frontend": "npm install --prefix frontend",
     "install:backend": "npm install --prefix backend",
-    "build:backend": "npm run build --workspace backend",
-    "build:frontend": "npm run build --workspace frontend",
+    "build:backend": "npm run build --prefix backend",
+    "build:frontend": "npm run build --prefix frontend",
     "build": "npm run build:backend && npm run build:frontend",
     "start:frontend": "npm run dev --prefix frontend",
     "start:backend": "npm run start --prefix backend",
@@ -25,7 +25,7 @@
     "concurrently": "^9.1.0"
   },
   "dependencies": {
-    
+    "src": "file:"
   },
   "engines": {
     "node": ">=16",
