--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,7 @@
     "build:backend": "npm run build --prefix backend",
     "build:frontend": "npm run build --prefix frontend",
     "build": "npm run build:backend && npm run build:frontend",
-    "start:frontend": "npm run dev --prefix frontend",
+    "start:frontend": "npm run preview --prefix frontend",
     "start:backend": "npm run start --prefix backend",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
@@ -25,7 +25,6 @@
     "concurrently": "^9.1.0"
   },
   "dependencies": {
-    "src": "file:"
   },
   "engines": {
     "node": ">=16",
