--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,7 @@
     "install:frontend": "npm install --prefix frontend",
     "install:backend": "npm install --prefix backend",
     "build:backend": "npm run build --prefix backend",
-    "build:frontend": "npm run build --prefix frontend",
+    "build:frontend": "npx run build --prefix frontend",
     "build": "npm run build:backend && npm run build:frontend",
     "start:frontend": "npm run preview --prefix frontend",
     "start:backend": "npm run start --prefix backend",
@@ -25,6 +25,7 @@
     "concurrently": "^9.1.0"
   },
   "dependencies": {
+    "src": "file:"
   },
   "engines": {
     "node": ">=16",
