--- a/src/package.json
+++ b/src/package.json
@@ -12,8 +12,8 @@
     "install:frontend": "npm install --prefix frontend",
     "install:backend": "npm install --prefix backend",
     "build:backend": "npm run build --prefix backend",
-    "build:frontend": "npx run build --prefix frontend",
-    "build": "npm run build:backend && npm run build:frontend",
+    "build:frontend": "npm run build --prefix frontend",
+    "build": "npm install && npm run build",
     "start:frontend": "npm run preview --prefix frontend",
     "start:backend": "npm run start --prefix backend",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
