--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.0",
+    "lar-da-vovo-estoque": "file:",
     "module-alias": "^2.2.3",
     "nodemailer": "^6.9.16",
     "pg": "^8.8.0",
