--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "npx vite build",
+    "build": "npm vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -18,6 +18,7 @@
     "apexcharts": "^4.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "frontend": "file:",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
