--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,8 @@
     "install:backend": "npm install --prefix backend",
     "build:backend": "npm run build --prefix backend",
     "build:frontend": "npm run build --prefix frontend",
-    "build": "npm install && npm run build",
+    "prebuild": "npm install",
+    "build": "npm run build:backend && npm run build:frontend",
     "start:frontend": "npm run preview --prefix frontend",
     "start:backend": "npm run start --prefix backend",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
