--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite --host 0.0.0.0 --port 3001"
+    "preview": "vite preview --host 0.0.0.0 --port 8080"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
